--- a/ingress-test.yml
+++ b/ingress-test.yml
@@ -1,16 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-app
+  name: nginxapp-ingress
 spec:
-  ingressClassName: zeus
   rules:
-  - http:
+  - host: "nginxhp22.com"
+    http:
       paths:
-      - path: /
-        pathType: Prefix
+      - pathType: Prefix
+        path: "/"
         backend:
           service:
-            name: nginxapp
+            name: nginxapp-svc
             port:
               number: 80
