--- a/ingress-test.yml
+++ b/ingress-test.yml
@@ -1,16 +1,13 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: nginxapp-ingress
 spec:
   rules:
-  - host: "nginxhp22.com"
-    http:
+  - http:
       paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: nginxapp-svc
-            port:
-              number: 80
+        - path: /
+          backend:
+            serviceName: nginxapp-svc
+            servicePort: nginxapp
+       
