--- a/ingress-test.yml
+++ b/ingress-test.yml
@@ -1,13 +1,16 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginxapp-ingress
 spec:
+  ingressClassName: nginx
   rules:
   - http:
       paths:
-        - path: /
-          backend:
-            serviceName: nginxapp-svc
-            servicePort: nginxapp
-       
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: nginxapp
+            port:
+              number: 80
