--- a/apps/app-build.yml
+++ b/apps/app-build.yml
@@ -7,7 +7,7 @@ spec:
     namespace: app
     server: https://kubernetes.default.svc
   source:
-    path: ./apps/data
+    path: apps/data
     repoURL: https://github.com/itayf287/ArgoCD
     targetRevision: HEAD
   sources: []
