--- a/app-for-apps.yml
+++ b/app-for-apps.yml
@@ -7,7 +7,7 @@ spec:
     namespace: app
     server: https://kubernetes.default.svc
   source:
-    path: ./apps
+    path: apps
     repoURL: https://github.com/itayf287/ArgoCD
     targetRevision: HEAD
   sources: []
