--- a/apps/app-build1.yml
+++ b/apps/app-build1.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginxapp-cli
+  name: nginxapp1
 spec:
   destination:
     namespace: app
