--- a/apps/app-build2.yml
+++ b/apps/app-build2.yml
@@ -1,1 +1,20 @@
-
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: nginxapp1
+spec:
+  destination:
+    namespace: app
+    server: https://kubernetes.default.svc
+  source:
+    path: apps/data
+    repoURL: https://github.com/itayf287/ArgoCD
+    targetRevision: HEAD
+  sources: []
+  project: default
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+  
+    automated:
+      selfHeal: true
