--- a/apps/app-build1.yml
+++ b/apps/app-build1.yml
@@ -8,7 +8,7 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: apps/data
-    repoURL: https://github.com/itayf287/ArgoCD
+    repoURL: git@github.com:itayf287/ArgoCD.git
     targetRevision: HEAD
   sources: []
   project: default
