--- a/apps/app-build2.yml
+++ b/apps/app-build2.yml
@@ -7,7 +7,7 @@ spec:
     namespace: app
     server: https://kubernetes.default.svc
   source:
-    path: apps/data
+    path: apps/data1
     repoURL: git@github.com:itayf287/ArgoCD.git
     targetRevision: HEAD
   sources: []
